--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
     "list-of-moroccan-cities": "^1.0.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
